--- a/tutorial_TeX/RB_CTMC_Tutorial/figures/gtr_graphical_model.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/figures/gtr_graphical_model.tex
@@ -1,62 +1,82 @@
+\definecolor{shc}{RGB}{183,207,237}
 \begin{tikzpicture}
-\node[black,draw=black,line width=2pt, dashed,dash pattern=on 7pt off 2pt,shape=rectangle,inner sep=30mm,rounded corners=1cm, rectangle split, rectangle split horizontal, rectangle split parts=3, rectangle split empty part height=9ex] (tp) at (-2,-2.5) { \nodepart {two}  };
-\node [font=\Large] at (tp.text) [above=3.5]{root};
-\node [font=\Large] at (tp.two) [above=3.5]{internal};
-\node [font=\Large] at (tp.three) [above=3.5]{tip};
-\node [obnode] (tn) at ($(tp.three)-(0,1.2)$) {$\mathcal{S}_{ij}$};
-\node [snode] (in) at ($(tp.two)-(0,1.2)$) {$\mathcal{S}_{ij}$};
-\node [snode] (rn) at ($(tp.text)-(0,1.2)$) {$\mathcal{S}_{ij}$};
-\node [font=\scriptsize,snode] (pin) at ($(in)+(0,2.5)$) {$\mathcal{S}_{\tilde{p}(i)j}$};
-\node [font=\scriptsize,snode] (ptn) at ($(tn)+(0,2.5)$) {$\mathcal{S}_{\tilde{p}(i)j}$};
-\draw [taro] (ptn) -- (tn) ;
-\draw [taro] (pin) -- (in) ;
-\node (a1) at ($(rn)-(2,0)$) { };
-\node (a2) at ($(tn)+(2,0)$) { };
-\node[rectangle,dashed, very thick, inner sep=6mm, draw=black!100, fit = (tn) (in) (ptn) (a1) (a2)] (siteplate) {};
-\node at ($(tn)+(0.2,-0.8)$) {$j \in N$};
-%\draw [taro] (p) -- (rj) ;
-\node at ($(tp.text)-(-2.0,2.6)$) {$i =$ root};
-\node at ($(tp.two)-(-2.0,2.6)$) {$i \in$ internals};
-\node at ($(tp.three)-(-2.25,2.6)$) {$i \in$ tips};
-\node [detnode] (qn) at ($(tp)-(0,5)$) {$Q$};
-\draw [taro] (qn) -- (in) ;
-\draw [taro] (qn) edge[bend right] (tn) ;
-\draw [taro] (qn) edge[bend left] (rn) ;
-\node [snode] (en) at ($(qn)-(2,1)$) {$\theta$};
-\node [snode] (bn) at ($(qn)-(-2,1)$) {$\pi$};
-\draw [dtaro] (en) -- (qn) ;
-\draw [dtaro] (bn) -- (qn) ;
-\node [constnode] (pen) at ($(en)-(1.5,0)$) {$e$};
-\node [constnode] (pbn) at ($(bn)-(-1.5,0)$) {$b$};
-\draw [taro] (pen) -- (en) ;
-\draw [taro] (pbn) -- (bn) ;
-\node [detnode] (lin) at ($(in)+(-2,4.5)$) {$a_i$};
-\node [detnode] (ltn) at ($(tn)+(-2,4.5)$) {$a_i$};
-\path ($(ltn)+(0.25,1)$) edge[->, line width=2pt, dashed,color=black] (ltn) ;
-\path ($(lin)+(0.25,1)$) edge[->, line width=2pt, dashed,color=black] (lin) ;
-\draw [taro] (lin) edge[bend right](in) ;
-\draw [taro] (ltn) edge[bend right](tn) ;
-\coordinate (Middle) at ($(lin)!0.5!(ltn)$);
-\node[constnode,inner sep=2mm] (a) at ($(tp)+(-17,1.5)$) {$a$};
-\node[constnode,inner sep=2mm] (b) at ($(tp)+(-17,0.5)$) {$b$};
-\node[constnode,inner sep=2mm] (c) at ($(tp)+(-17,-0.5)$) {$c$};
-\node[constnode,inner sep=2mm] (d) at ($(tp)+(-17,-1.5)$) {$d$};
-\node[snode,inner sep=2mm] (turnover) at ($(tp)+(-15,-1)$) {$turn$};
-\node[snode,inner sep=2mm] (diversification) at ($(tp)+(-15,1)$) {$div$};
-\node[detnode,inner sep=2mm] (lambda) at ($(tp)+(-13,1)$) {$\lambda$};
-\node[detnode,inner sep=2mm] (mu) at ($(tp)+(-13,-1)$) {$\mu$};
-\node[snode,inner sep=2mm] (topo) at ($(tp)+(-11,0)$) {\Large $\Psi$};
-\draw [taro] (a) -- (diversification) ;
-\draw [taro] (b) -- (diversification) ;
-\draw [taro] (c) -- (turnover) ;
-\draw [taro] (d) -- (turnover) ;
-\draw [dtaro] (diversification) -- (lambda) ;
-\draw [dtaro] (turnover) -- (lambda) ;
-\draw [dtaro] (turnover) -- (mu) ;
-\draw [taro] (lambda) -- (topo) ;
-\draw [taro] (mu) -- (topo) ;
-\draw[-,line width=2pt] (topo) -- (tp) ;
+\node[obnode] (x) at (-2,1) {\LARGE $S$};
+\node (x_dist) at ($(x)+(0.8,-0.7)$) {PhyloCTMC};
+\draw (x) -- (x_dist) ;
+\node[detnode] (Q) at ($(x)+(2,2)$) {\Large $Q$};
+\node (Q_dist) at ($(Q)+(0.8,-0.7)$) {GTR};
+\draw (Q) -- (Q_dist) ;
+\node[detnode] (rate) at ($(x)+(-2,0)$) {\small $clock$};
+\node[snode] (log_rate) at ($(rate)+(-2,0)$) {\tiny $log\_clock$};
+\node[constnode] (c) at ($(log_rate)+(-2.25,0.5)$) {\large $-6$};
+\node[constnode] (d) at ($(log_rate)+(-2.25,-0.5)$) {\large $1$};
+\draw [dtaro] (log_rate) -- (rate);
+\draw [taro] (c) -- (log_rate);
+\draw [taro] (d) -- (log_rate);
+\node (clock_dist) at ($(log_rate)+(-1.0,-1.0)$) {Uniform};
+\draw (log_rate) -- (clock_dist) ;
+\node[snode] (psi) at ($(x)+(-2,2)$) {\Large $\Psi$};
+\node (psi_dist) at ($(psi)+(-0.8,-0.7)$) {BirthDeath};
+\draw (psi) -- (psi_dist) ;
+\node[detnode] (lambda) at ($(psi)+(-0.5,1.5)$) {\LARGE $\lambda$};
+\node[detnode] (mu) at ($(psi)+(1,1.5)$) {\LARGE $\mu$};
+\node[snode] (div) at ($(lambda)+(-0.5,1.5)$) {\LARGE $d$};
+\node[snode] (turn) at ($(mu)+(0.5,1.5)$) {\LARGE $r$}; 
+\node (div_dist) at ($(div)+(1.2,0.7)$) {Lognormal};
+\draw (turn) -- (div_dist) ;
+\draw (div) -- (div_dist) ;
+\node[constnode] (md) at ($(div)+(-0.6,2)$) {\Large $m_d$};
+\node[constnode] (sdd) at ($(div)+(0.6,2)$) {\Large $sd_d$};
+\node[constnode] (mt) at ($(turn)+(-0.6,2)$) {\Large $m_r$};
+\node[constnode] (sdt) at ($(turn)+(0.6,2)$) {\Large $sd_r$};
+\node[constnode] (root) at ($(psi)+(-1.5,0.5)$) {$90$};
+\draw [taro] (lambda) -- (psi);
+\draw [taro] (mu) -- (psi);
+\draw [taro] (md) -- (div);
+\draw [taro] (sdd) -- (div);
+\draw [taro] (mt) -- (turn);
+\draw [taro] (sdt) -- (turn);
+\draw [dtaro] (div) -- (lambda);
+\draw [dtaro] (turn) -- (lambda);
+\draw [dtaro] (turn) -- (mu);
+\node[snode] (pi) at ($(Q)+(-0.75,1.5)$) {\large $pi$};
+\node (pi_dist) at ($(pi)+(-0.8,-0.7)$) {Dirichlet};
+\draw (pi) -- (pi_dist) ;
+\node[snode] (er) at ($(Q)+(0.75,1.5)$) {\large $er$};
+\node (er_dist) at ($(er)+(0.8,-0.7)$) {Dirichlet};
+\draw (er) -- (er_dist) ;
+\node[constnode] (alpha) at ($(pi)+(0,1.5)$) {\large $\alpha_2$};
+\node[constnode] (beta) at ($(er)+(0,1.5)$) {\large $\alpha_1$};
+\draw [dtaro] (er) -- (Q) ;
+\draw [dtaro] (pi) -- (Q) ;
+\draw [taro] (Q) -- (x) ;
+\draw [taro] (psi) -- (x) ;
+\draw [taro] (rate) -- (x) ;
+\draw [taro] (alpha) -- (pi) ;
+\draw [taro] (beta) -- (er) ;
+\draw [taro] (root) -- (psi) ;
+\node (a1) at (4,0.25) { };
+\node (a2) at (4,8.5) { };
+\node (a3) at (13.5,2.75) { };
+\node[rectangle, very thick, inner sep=6mm, fill=shc, fit = (a1) (a2) (a3)] (console) {};
+\node (l1) at (4,8.75) [right]{\tt m\_d <- ln( ln(450/2) / 90 )};
+\node (l1) at (4,8.4) [right]{\tt sd\_d <- 0.587405*2};
+\node (l1) at (4,8.05) [right]{\tt d $\sim$ dnLognorma(m\_d,sd\_d)};
+\node (l1) at (4,7.7) [right]{\tt m\_r <- ln( ln(450/2) / 90 )};
+\node (l1) at (4,7.35) [right]{\tt sd\_r <- 0.587405*2};
+\node (l1) at (4,7.0) [right]{\tt r $\sim$ dnLognorma(m\_r,sd\_r)};
+\node (l1) at (4,6.65) [right]{\tt lambda := d + r};
+\node (l1) at (4,6.3) [right]{\tt mu := r};
+\node (l1) at (4,5.95) [right]{\tt root <- 90.0};
+\node (l2) at (4,5.6) [right]{\tt psi $\sim$ dnBirthDeath( lambda, mu, root, taxa)};
+\node (l4) at (4,4.7) [right]{\tt alpha1 <- v(1,1,1,1,1,1) };
+\node (l5) at (4,4.35) [right]{\tt alpha2 <- v(1,1,1,1) };
+\node (l6) at (4,4.0) [right]{\tt er $\sim$ dnDirichlet( alpha1 ) };
+\node (l7) at (4,3.65) [right]{\tt pi $\sim$ dnDirichlet( alpha2 ) };
+\node (l8) at (4,3.3) [right]{\tt Q\_mol := fnGTR(er, pi) };
+\node (l1) at (4,2.55) [right]{\tt log\_clock $\sim$ dnUniform(-6,1)};
+\node (l1) at (4,2.2) [right]{\tt clock := 10\textasciicircum log\_clock};
+\node (l9) at (4,1.3) [right]{\tt seq $\sim$ dnPhyloCTMC( tree=psi, Q=Q\_mol, };
+\node (l9) at (7.6,0.95) [right]{\tt branchRates=0.01, type="DNA" ) };
+\node (l10) at (4,0.6) [right]{\tt seq.clamp( data ) };
 \end{tikzpicture}
-
-
-
